HelloUltraviolet/Fixtures/RejectedSource/Names/DuplicateModuleDeclaration/Expected.uv
//! Expected diagnostic metadata for the DuplicateModuleDeclaration rejected-source specimen.

expectedDiagnostic("E-MOD-1302", "Collect-Dup")
